Added path model, working on visibility

--- a/aalto.bib
+++ b/aalto.bib
@@ -1,4 +1,10 @@
 
+@misc{13HannaSiskoYouTube,
+  title = {(13) {{Hanna}}-{{Sisko O}} - {{YouTube}}},
+  file = {/home/avnerus/Zotero/storage/UMYMXQN7/UCfOMNbil_YHA9zHx1sb5cHA.html},
+  howpublished = {https://www.youtube.com/channel/UCfOMNbil\_YHA9zHx1sb5cHA}
+}
+
 @book{adornoDialecticEnlightenment1997,
   title = {Dialectic of Enlightenment},
   author = {Adorno, Theodor W. and Horkheimer, Max},
@@ -113,6 +119,12 @@
   file = {/home/avnerus/Zotero/storage/JR4C25SW/Amichai-Hamburger et al. - 2015 - Structured and unstructured intergroup contact in .pdf},
   journal = {Computers in Human Behavior},
   language = {en}
+}
+
+@misc{AnybotsIncNEW,
+  title = {Anybots 2.0 {{Inc}}. - {{NEW QB2}}.0 {{WebRTC}}},
+  abstract = {ANYBOTS. IT'S YOU, ANYWHERE. Anybots' Virtual Presence Systems enhance quality of life and enables you to be where your heart needs to be, but you can't.},
+  howpublished = {https://www.anybots.com}
 }
 
 @misc{Aoki,
@@ -489,6 +501,22 @@
   isbn = {1-84642-486-0}
 }
 
+@article{crispCanImaginedInteractions2009,
+  title = {Can Imagined Interactions Produce Positive Perceptions?: {{Reducing}} Prejudice through Simulated Social Contact.},
+  shorttitle = {Can Imagined Interactions Produce Positive Perceptions?},
+  author = {Crisp, Richard J. and Turner, Rhiannon N.},
+  year = {2009},
+  volume = {64},
+  pages = {231--240},
+  issn = {1935-990X, 0003-066X},
+  doi = {10.1037/a0014718},
+  abstract = {The contact hypothesis states that, under the right conditions, contact between members of different groups leads to more positive intergroup relations. The authors track recent trends in contact theory to the emergence of extended, or indirect, forms of contact. These advances lead to an intriguing proposition: that simply imagining intergroup interactions can produce more positive perceptions of outgroups. The authors discuss empirical research supporting the imagined contact proposition and find it to be an approach that is at once deceptively simple and remarkably effective. Encouraging people to mentally simulate a positive intergroup encounter leads to improved outgroup attitudes and reduced stereotyping. It curtails intergroup anxiety and extends the attribution of perceivers' positive traits to others. The authors describe the advantages and disadvantages of imagined contact compared to conventional strategies, outline an agenda for future research, and discuss applications for policymakers and educators in their efforts to encourage more positive intergroup relations.},
+  file = {/home/avnerus/Zotero/storage/VDKVT7NG/Crisp and Turner - 2009 - Can imagined interactions produce positive percept.pdf},
+  journal = {American Psychologist},
+  language = {en},
+  number = {4}
+}
+
 @article{cuervoMerleauPontyThesisVertical2013,
   title = {Merleau-{{Ponty}} and the {{Thesis}} of {{Vertical Being}}-in-the-{{World}}:},
   shorttitle = {Merleau-{{Ponty}} and the {{Thesis}} of {{Vertical Being}}-in-the-{{World}}},
@@ -509,6 +537,12 @@
   year = {1998},
   pages = {137--168},
   journal = {Perception and cognition at century's end: history, philosophy, and theory. Academic Press, San Diego, CA}
+}
+
+@misc{D3herohdPngPNG,
+  title = {D3-Hero-Hd.Png ({{PNG Image}}, 1130~\texttimes{}~1600 Pixels) - {{Scaled}} (57\%)},
+  file = {/home/avnerus/Zotero/storage/U39472WH/d3-hero-hd.html},
+  howpublished = {https://www.doublerobotics.com/img2/\_2x/d3-hero-hd.png}
 }
 
 @article{daneseSoftMachine2003,
@@ -1888,6 +1922,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {50}
 }
 
+@book{linRobotEthicsEthical2012,
+  title = {Robot Ethics: The Ethical and Social Implications of Robotics},
+  shorttitle = {Robot Ethics},
+  editor = {Lin, Patrick and Abney, Keith and Bekey, George A.},
+  year = {2012},
+  publisher = {{MIT Press}},
+  address = {{Cambridge, Mass}},
+  isbn = {978-0-262-01666-7},
+  keywords = {Aufsatzsammlung,Design and construction,Human factors,Moral and ethical aspects,Robotics,Robots,Social aspects},
+  language = {en},
+  lccn = {TJ211.49 .R62 2012},
+  note = {OCLC: ocn719429231},
+  series = {Intelligent Robotics and Autonomous Agents}
+}
+
 @misc{lockettLastNightSouth2017,
   title = {Last {{Night}}'s {{South Park Commanded People}}'s {{Amazon Echos}} to {{Say NSFW Lines}}},
   author = {Lockett, Dee},
@@ -1944,6 +1993,12 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   volume = {75},
   publisher = {{Walter de Gruyter}},
   isbn = {3-11-086183-6}
+}
+
+@misc{MantaroBotTeleMe,
+  title = {{{MantaroBot}} - {{TeleMe}} 2},
+  file = {/home/avnerus/Zotero/storage/AC2P8YYM/index.html},
+  howpublished = {http://www.mantarobot.com/products/teleme-2/index.htm}
 }
 
 @article{maozDoesContactWork2011,
@@ -2360,7 +2415,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
 
 @article{ogawaExploringNaturalReaction2011,
   title = {Exploring the {{Natural Reaction}} of {{Young}} and {{Aged Person}} with {{Telenoid}} in a {{Real World}}},
-  author = {Ogawa, Kohei and Nishio, Shuichi and Koda, Kensuke and Balistreri, Giuseppe and Watanabe, Tetsuya and Ishiguro, Hiroshi and {ATR Intelligent Robotics and Communication Laboratory, 2-2-2 Hikaridai, Seikacho, Souraku-gun, Kyoto 619-0288, Japan} and {Graduate School of Engineering Science, Osaka University, 1-3 Machikaneyama, Toyonaka, Osaka 560-8531, Japan} and {Dipartimento di Ingegneria Informatica, Universit{\`a} degli Studi di Palermo, Viale delle Scienze, Edificio 690128 Palermo, Italia}},
+  author = {Ogawa, Kohei and Nishio, Shuichi and Koda, Kensuke and Balistreri, Giuseppe and Watanabe, Tetsuya and Ishiguro, Hiroshi and {ATR Intelligent Robotics and Communication Laboratory, 2-2-2 Hikaridai, Seikacho, Souraku-gun, Kyoto 619-0288, Japan} and {Graduate School of Engineering Science, Osaka University, 1-3 Machikaneyama, Toyonaka, Osaka 560-8531, Japan} and {Dipartimento di Ingegneria Informatica, Universit\`a degli Studi di Palermo, Viale delle Scienze, Edificio 690128 Palermo, Italia}},
   year = {2011},
   month = jul,
   volume = {15},
@@ -2386,6 +2441,23 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
 
 @article{Omnipresenz,
   title = {Omnipresenz}
+}
+
+@article{pagottoEffectivenessIntergroupContact2010,
+  title = {The Effectiveness of Intergroup Contact at Work: {{Mediators}} and Moderators of Hospital Workers' Prejudice towards Immigrants},
+  shorttitle = {The Effectiveness of Intergroup Contact at Work},
+  author = {Pagotto, Lisa and Voci, Alberto and Maculan, Valentina},
+  year = {2010},
+  month = apr,
+  volume = {20},
+  pages = {317--330},
+  issn = {10529284, 10991298},
+  doi = {10.1002/casp.1038},
+  abstract = {The present research examines the effectiveness of intergroup contact between 167 Italian hospital workers and foreign patients in reducing prejudice towards immigrants in general. The outcomes of contact at work were analysed controlling for the influence of contact outside the workplace and through mass media, and taking into account the role of empathy, anxiety and group membership salience. Results indicate that the beneficial effects of contact at work were partially mediated by increased empathy and reduced anxiety, experienced both in the work environment and towards immigrants in general. Finally, high levels of group membership salience facilitated the influence of contact on intergroup emotions. These findings show that contact at work can be a powerful means to reduce prejudice, thanks to its capacity to evoke changes in affective responses. Copyright \# 2010 John Wiley \& Sons, Ltd.},
+  file = {/home/avnerus/Zotero/storage/NU6675RT/Pagotto et al. - 2010 - The effectiveness of intergroup contact at work M.pdf},
+  journal = {Journal of Community \& Applied Social Psychology},
+  language = {en},
+  number = {4}
 }
 
 @misc{parker-popeTruthSpinningDancer2008,
@@ -2481,6 +2553,36 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   file = {/home/avnerus/Zotero/storage/HZEUSER5/Stuart Oskamp - Reducing prejudice and discrimination-Lawrence Erlbaum Associates (2000).epub}
 }
 
+@article{pettigrewHowDoesIntergroup2008,
+  title = {How Does Intergroup Contact Reduce Prejudice? {{Meta}}-Analytic Tests of Three Mediators},
+  shorttitle = {How Does Intergroup Contact Reduce Prejudice?},
+  author = {Pettigrew, Thomas F. and Tropp, Linda R.},
+  year = {2008},
+  month = sep,
+  volume = {38},
+  pages = {922--934},
+  issn = {00462772, 10990992},
+  doi = {10.1002/ejsp.504},
+  abstract = {Recent years have witnessed a renewal of interest in intergroup contact theory. A meta-analysis of more than 500 studies established the theory's basic contention that intergroup contact typically reduces prejudices of many types. This paper addresses the issue of process: just how does contact diminish prejudice? We test meta-analytically the three most studied mediators: contact reduces prejudice by (1) enhancing knowledge about the outgroup, (2) reducing anxiety about intergroup contact, and (3) increasing empathy and perspective taking. Our tests reveal mediational effects for all three of these mediators. However, the mediational value of increased knowledge appears less strong than anxiety reduction and empathy. Limitations of the study and implications of the results are discussed. Copyright \# 2008 John Wiley \& Sons, Ltd.},
+  file = {/home/avnerus/Zotero/storage/UH52GQ93/Pettigrew and Tropp - 2008 - How does intergroup contact reduce prejudice Meta.pdf},
+  journal = {European Journal of Social Psychology},
+  language = {en},
+  number = {6}
+}
+
+@article{pettigrewIntergroupContactTheory1998,
+  title = {Intergroup Contact Theory},
+  author = {Pettigrew, Thomas F.},
+  year = {1998},
+  volume = {49},
+  pages = {65--85},
+  publisher = {{Annual Reviews 4139 El Camino Way, PO Box 10139, Palo Alto, CA 94303-0139, USA}},
+  file = {/home/avnerus/Zotero/storage/UGLIFJ8M/Pettigrew - INTERGROUP CONTACT THEORY.pdf},
+  isbn = {0066-4308},
+  journal = {Annual review of psychology},
+  number = {1}
+}
+
 @article{pettigrewIntergroupPrejudiceIts2011,
   title = {Intergroup Prejudice: {{Its}} Causes and Cures},
   shorttitle = {Intergroup Prejudice},
@@ -2492,7 +2594,7 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   issn = {2215-3535, 0258-6444},
   doi = {10.15517/ap.v22i109.18},
   file = {/home/avnerus/Zotero/storage/MKNDGZAM/Pettigrew - 2011 - Intergroup prejudice Its causes and cures.pdf},
-  journal = {Actualidades en Psicolog{\'i}a},
+  journal = {Actualidades en Psicolog\'ia},
   language = {en},
   number = {109}
 }
@@ -2550,6 +2652,12 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   howpublished = {https://github.com/Programmable-Air},
   journal = {GitHub},
   language = {en}
+}
+
+@misc{PRoP,
+  title = {{{PRoP}}},
+  file = {/home/avnerus/Zotero/storage/Z9MUDHMJ/www.prop.org.html},
+  howpublished = {http://www.prop.org/}
 }
 
 @misc{RadioheadLiveBerlin,
@@ -3344,6 +3452,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {2}
 }
 
+@article{vociIntergroupContactPrejudice2003,
+  title = {Intergroup {{Contact}} and {{Prejudice Toward Immigrants}} in {{Italy}}: {{The Mediational Role}} of {{Anxiety}} and the {{Moderational Role}} of {{Group Salience}}},
+  shorttitle = {Intergroup {{Contact}} and {{Prejudice Toward Immigrants}} in {{Italy}}},
+  author = {Voci, Alberto and Hewstone, Miles},
+  year = {2003},
+  month = jan,
+  volume = {6},
+  pages = {37--54},
+  issn = {1368-4302, 1461-7188},
+  doi = {10.1177/1368430203006001011},
+  file = {/home/avnerus/Zotero/storage/6NBVABB4/Voci and Hewstone - 2003 - Intergroup Contact and Prejudice Toward Immigrants.pdf},
+  journal = {Group Processes \& Intergroup Relations},
+  language = {en},
+  number = {1}
+}
+
 @book{vonlabanChoreutics1966,
   title = {Choreutics},
   author = {Von Laban, Rudolf},
@@ -3418,7 +3542,7 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   pages = {550--558},
   issn = {07475632},
   doi = {10.1016/j.chb.2014.08.004},
-  abstract = {The promise of computer-mediated communication (CMC) to reduce intergroup prejudice has generated mixed results. Theories of CMC yield alternative and mutually exclusive explanations about mechanisms by which CMC fosters relationships online with potential to ameliorate prejudice. This research tests contact-hypothesis predictions and two CMC theories on multicultural, virtual groups who communicated during a yearlong online course focusing on educational technology. Groups included students from the three major Israeli education sectors\textemdash{}religious Jews, secular Jews, and Muslims\textemdash{}who completed pretest and posttest prejudice measures. Two sets of control subjects who did not participate in virtual groups provided comparative data. An interaction of the virtual groups experience {\^A} religious/cultural membership affected prejudice toward different religious/cultural target groups, by reducing prejudice toward the respective outgroups for whom the greatest initial enmity existed. Comparisons of virtual group participants to control subjects further support the influence of the online experience. Correlations between prejudice with group identification and with interpersonal measures differentiate which theoretical processes pertained.},
+  abstract = {The promise of computer-mediated communication (CMC) to reduce intergroup prejudice has generated mixed results. Theories of CMC yield alternative and mutually exclusive explanations about mechanisms by which CMC fosters relationships online with potential to ameliorate prejudice. This research tests contact-hypothesis predictions and two CMC theories on multicultural, virtual groups who communicated during a yearlong online course focusing on educational technology. Groups included students from the three major Israeli education sectors\textemdash{}religious Jews, secular Jews, and Muslims\textemdash{}who completed pretest and posttest prejudice measures. Two sets of control subjects who did not participate in virtual groups provided comparative data. An interaction of the virtual groups experience \^A religious/cultural membership affected prejudice toward different religious/cultural target groups, by reducing prejudice toward the respective outgroups for whom the greatest initial enmity existed. Comparisons of virtual group participants to control subjects further support the influence of the online experience. Correlations between prejudice with group identification and with interpersonal measures differentiate which theoretical processes pertained.},
   file = {/home/avnerus/Zotero/storage/TQ4WPEDZ/Walther et al. - 2015 - Computer-mediated communication and the reduction .pdf},
   journal = {Computers in Human Behavior},
   language = {en}
@@ -3485,6 +3609,17 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   howpublished = {https://spectrum.ieee.org/automaton/robotics/humanoids/what-is-the-uncanny-valley},
   journal = {IEEE Spectrum: Technology, Engineering, and Science News},
   language = {en}
+}
+
+@article{whitby15YouWant2011,
+  title = {15 {{Do You Want}} a {{Robot Lover}}? {{The Ethics}} of {{Caring Technologies}}},
+  author = {Whitby, Blay},
+  year = {2011},
+  pages = {233},
+  publisher = {{MIT Press}},
+  file = {/home/avnerus/Zotero/storage/W3K9FXP9/Lin et al. - 2012 - Robot ethics the ethical and social implications .pdf},
+  isbn = {0262297752},
+  journal = {Robot ethics: The ethical and social implications of robotics}
 }
 
 @article{whiteImprovingIntergroupRelations2015,
